Configure static export for Amplify deployment

--- a/amplify.yml
+++ b/amplify.yml
@@ -9,11 +9,10 @@ applications:
           commands:
             - npm run build
       artifacts:
-        baseDirectory: .next
+        baseDirectory: out
         files:
           - '**/*'
       cache:
         paths:
           - node_modules/**/*
-          - .next/cache/**/*
     appRoot: website
