Fix npm publish: add legacy-peer-deps, bump version to 0.1.3

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Install dependencies
         working-directory: sdk/js
-        run: npm install
+        run: npm install --legacy-peer-deps
 
       - name: Build
         working-directory: sdk/js
