--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,44 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.11", "3.12"]
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -e ".[dev]"
-
-      - name: Run linting
-        run: |
-          ruff check sigaid/
-
-      - name: Run type checking
-        run: |
-          mypy sigaid/ --ignore-missing-imports
-
-      - name: Run tests
-        run: |
-          pytest tests/ -v --cov=sigaid --cov-report=xml
-
-      - name: Upload coverage
-        uses: codecov/codecov-action@v4
-        with:
-          files: ./coverage.xml
-          fail_ci_if_error: false
-
-  build:
+  python:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -54,17 +17,16 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install build tools
-        run: pip install build
+      - name: Install package
+        run: pip install -e .
+
+      - name: Test import
+        run: python -c "from sigaid import Agent, AgentFace; print('Import OK')"
 
       - name: Build package
-        run: python -m build
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: dist
-          path: dist/
+        run: |
+          pip install build
+          python -m build
 
   typescript:
     runs-on: ubuntu-latest
@@ -77,13 +39,9 @@ jobs:
           node-version: "20"
 
       - name: Install dependencies
-        working-directory: sdk/faces
-        run: npm ci
-
-      - name: Type check
-        working-directory: sdk/faces
-        run: npm run typecheck
+        working-directory: sdk/js
+        run: npm install --legacy-peer-deps
 
       - name: Build
-        working-directory: sdk/faces
+        working-directory: sdk/js
         run: npm run build
